--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   api:
-    build: .
+    build: ./api
     container_name: fastapi_app
     restart: always
     depends_on:
@@ -25,8 +25,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/app
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+      - ./api:/app
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   ai:
     image: ollama/ollama:latest
